solved the desktop layout problem using flexbox

--- a/Form/style.css
+++ b/Form/style.css
@@ -117,9 +117,12 @@ img {
 #Enrolled {
   display: none;
 }
+#enrollmentForm {
+  flex: 1;
+}
 
 #studentList {
-  background-color: red;
+  flex: 1;
 }
 
 .Enrollments {
@@ -147,7 +150,7 @@ img {
 @media (min-width : 750px) {
   #Box{
     display :flex ;
-    flex: 1;
+    gap: 15px;
   }
   
 }
